# MAI-FA-LW

./: .gitignore  CMakeLists.txt  README.md
LW1/LW1.1/: CMakeLists.txt
LW1/LW1.1/include/: flags_handler.h
LW1/LW1.1/src/: flags_handler.c  main.c
LW1/LW1.2/: CMakeLists.txt
LW1/LW1.2/include/: sieve.h  validator.h
LW1/LW1.2/src/: main.c  sieve.c  validator.c
LW1/LW1.3/: CMakeLists.txt
LW1/LW1.3/include/: opt_handler.h  validator.h
LW1/LW1.3/src/: main.c  opt_handler.c  validator.c
LW1/LW1.4/: CMakeLists.txt
LW1/LW1.4/include/: calc_e.h  calc_gamma.h  calc_ln2.h  calc_pi.h  calc_sqrt2.h  calculate_eps.h  validator.h
LW1/LW1.4/src/: calc_e.c  calc_gamma.c  calc_ln2.c  calc_pi.c  calc_sqrt2.c  calculate_eps.c  main.c  validator.c
LW1/LW1.5/: CMakeLists.txt
LW1/LW1.5/include/: opt_handler.h
LW1/LW1.5/src/: main.c  opt_handler.c
LW1/LW1.6/: CMakeLists.txt
LW1/LW1.6/include/: calculation.h  opt_handler.h
LW1/LW1.6/src/: calculation.c  main.c  opt_handler.c
LW1/LW1.7/: CMakeLists.txt
LW1/LW1.7/include/: file_processing.h  opt_processing.h
LW1/LW1.7/src/: file_processing.c  main.c  opt_processing.c
LW1/LW1.8/: CMakeLists.txt
LW1/LW1.8/include/: validate_input.h
LW1/LW1.8/src/: main.c  validate.c
